--- a/css/index_large.css
+++ b/css/index_large.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CORPO DA PÁGINA */
 .interface {
 	font-family: arial, sans-serif;
@@ -8,14 +8,15 @@
 }
 .postagens {
 	display: block;
-	width: 70%;
+	width: 69%;
 	float: left;
-	border-right: solid 1px;
+	padding-left: 15px;
 }
 .windgets {
 	display: block;
-	width: 29%;
+	width: 28.5%;
 	float: right;
+	padding-right: 15px;
 }
 .rodape {
 	clear: both;
@@ -29,8 +30,9 @@ span#tavisNome {
 	display: block;
 	text-align: center;
 	box-sizing: border-box;
-	border: solid 1px;
-	margin: 10px;
+	border: solid 1px; 
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 hgroup h1 {
 	border-bottom: dashed 1px;
@@ -47,11 +49,11 @@ hgroup h1:hover {
 /* IMC WINDOW */
 .imcwindow {
 	display: block;
-	border: solid 1px;
+	border: none;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 10px;
-	width: 97.8%;
+	width: 100%;
 	box-sizing: border-box;
 }
 /* CABEÇALHO */
@@ -102,10 +104,12 @@ nav.menu{
 	position: absolute;
 	margin-top: -45px;
 	margin-left: -10%;
-	width: 100%;
+	width: 99.6%;
 	background: #90EE90;
 	box-sizing: border-box;
-	border: solid 1px;
+	border-top: solid 1px;
+	border-left: solid 1px;
+	border-bottom: solid 1px;
 	box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
 }
 nav.menu ul{
@@ -150,13 +154,15 @@ nav.menu ul{
 	width: 137px;
 	padding: 10px;
 	font-size: 15px;
-	border: solid 1px;
+	border: solid 1px rgba(0,0,0,0.3);
+	border-radius: 8px;
 }
 #alt-form {
 	width: 68px;
 	padding: 10px;
 	font-size: 15px;
-	border: solid 1px;
+	border: solid 1px rgba(0,0,0,0.3);
+	border-radius: 8px;
 }
 #mass-form:required:valid {
 	box-shadow: 0px 0px 5px #38d708;
@@ -166,12 +172,9 @@ nav.menu ul{
 	box-shadow: 0px 0px 5px #38d708;
 	border-color: #a4f78b;
 }
-#mass-form:invalid {
-	box-shadow: 0px 0px 5px #f40000;
-	border-color: #f86868;
-}#alt-form:invalid {
-	box-shadow: 0px 0px 5px #f40000;
-	border-color: #f86868;
+.sex:required:valid {
+	box-shadow: 0px 0px 5px #38d708;
+	border-color: #a4f78b;
 }
 fieldset {
 	border: none;
@@ -191,6 +194,15 @@ fieldset p {
 	padding-left: 92px;
 	padding-right: 92px;
 	font-size: 20px;
+	background-color: white;
+	border: solid 1px rgba(0,0,0,0.3); 
+	border-radius: 5px;
+}
+#makecalc:hover {
+	box-shadow: inset 0px 0px 5px rgba(0,0,0,0.3);
+}
+#makecalc:active {
+	background-color: rgba(0,9999,0,0.1);
 }
 /* RODAPÉ */ 
 footer p {
