--- a/css/iframe.css
+++ b/css/iframe.css
@@ -1,68 +1,220 @@
 @charset "utf-8";
-header#secundario {
-    width: 100%;
-    background: #228B22;
+/* CORPO DA PÁGINA */
+body {
+	font-family: arial, sans-serif;
 }
-#btn-menu{
-    display: none;
+h1 {
+	font-size: 20pt;
+	padding-bottom: 7px;
+	border-bottom: solid 1px;
 }
-header label {
-    display: none;
-    width:20px;
-    height: 30px;
-    padding: 10px;
-    border-right: 1px solid #fff;	
+/* MENU IFRAME */
+.menu-sec {
+	width: 100%;
+	margin-bottom: -10px;
 }
- .menu-sec li:hover{
-     background-color:#006400; }
-
- header label :hover {
-     cursor: pointer;
-     background: rgba(0,0,0,0.3);
- }
- .menu-sec ul{
-     margin: 0;
-     list-style: none;
-     padding: 0;
-     display: flex;
-     justify-content: flex-end;    
+.menu-sec a {
+	text-decoration: none;
 }
-.menu-sec li{
-    border-left: 1px solid #fff;}
+.menu-sec ul {
+	border: solid 1px;
+	background-color: #90EE90;
+	text-transform: uppercase;
+	box-shadow: 0px 0px 5px rgba(0,0,0,0.4);
 }
- .menu-sec li:hrover{ 
-     background: rgba(0,0,0,0.3);
+.menu-sec li {
+	padding: 10px;
+	color: #000000;
+	font-weight: bold;
+    display: inline-block;
+    transition: .5s;
 }
- .menu-sec li a {
-     display: block;
-     padding: 15px 20px;
-     color: #fff;
-     text-decoration: none;
-     text-decoration-line: underline;
+.menu-sec li:hover {
+	color: #ffffff;
+	background-color: #23532f;
+	cursor: pointer;
 }
- @media (max-width: 300px) {
-
-     header label{
-         display: block;
-     }
-     .menu-sec {
-         position: absolute;
-         background:#228B22;
-         width: 40%;
-         margin-left: -80%;
-        transition: all 0.5s;
-
-     }
-         .menu-sec ul{
-            flex-direction: column;
-        }
-        .menu-sec li {
-            border-top: 1px solid #fff;
-            
-
-        }
-        #btn-menu:checked ~ .menu-sec{
-            margin: 0;
-
-        }
- }
+/* ARTICLE */
+article {
+	display: block;
+	border: solid 1px rgba(0,0,0,0.1);
+	width: 49%;
+	padding-right: 10px;
+	padding-top: 0px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	background-color: #b9f9b1;
+	box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+	min-height: 280px;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+	box-sizing: border-box;
+}
+article h2 {
+	padding-left: 8px;
+	padding-right: 12.5px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	margin-top: 0px;
+	color: #ffffff;
+	background-color: #23532f;
+	width: 100%;
+	margin-left: -10px;
+}
+article p {
+	text-align: justify;
+	text-indent: 30px;
+}
+#c1,#c3,#c5 {
+	float: left;
+}
+#c2,#c4,#c6 {
+	float: right;
+}
+#fonte {
+	text-align: right;
+}
+/* ARTICLE #INF */
+#inf {
+	width: 100%;
+	height: 490px;
+}
+#inf h2 {
+	text-align: center;
+	font-size: 15pt;
+	font-weight: normal;
+}
+#inf span {
+	font-weight: bold;
+}
+#inf ul {
+	display: block;
+	margin-left: -30px;
+	margin-right: auto;
+	list-style: none;
+}
+#inf li {
+	color: rgba(0,0,0,0.5);
+	margin: 5px;
+	padding: 20px;
+	display: inline-block;
+	border: dashed 1px rgba(0,0,0,0.5);
+}
+#inf #ifpiLogo {
+	display: block;
+	width: 300px;
+	margin-left: auto;
+	margin-top: 10px;
+	margin-right: auto;
+}
+#like {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+	width: 350px;
+}
+#danger {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+	width: 385px;
+}
+#scrr2 {
+	text-align: center;
+	font-size: 15pt;
+	margin-top: -25px;
+}
+#scrr {
+	margin-top: 10px;
+	text-align: center;
+	font-size: 20pt;
+	font-weight: bold;
+}
+/* CONVERSA DE AJUDA */
+#talk1 {
+	opacity: 0;
+	transition: all 1s;
+}
+#talk2 {
+	opacity: 0;
+	transition: all 1s;
+}
+#ex2 {
+	color: rgba(0,0,0,0.5);
+	width: 225px;
+	padding: 5px;
+	display: block;
+	border: dashed 1px rgba(0,0,0,0.5);
+	font-size: 11pt;
+	margin-top: 10px;
+	margin-left: -40px;
+	margin-right: auto;
+}
+#ex {
+	color: rgba(0,0,0,0.5);
+	width: 228px;
+	padding: 5px;
+	display: block;
+	border: dashed 1px rgba(0,0,0,0.5);
+	font-size: 11pt;
+	margin-top: 10px;
+	margin-left: auto;
+	margin-right: -40px;
+}
+#balao1 {
+	display: block;
+	margin-left: -40px;
+	margin-right: auto;
+	width: 50%;
+}
+#balao2 {
+	display: block;
+	margin-top: 10px;
+	margin-left: auto;
+	margin-right: -40px;
+	width: 50%;
+}
+#balao3 {
+	display: block;
+	margin-left: -40px;
+	margin-right: auto;
+	width: 50%;
+}
+#balao4 {
+	display: block;
+	margin-top: 45px;
+	margin-left: -40px;
+	margin-right: auto;
+	width: 50%;
+}
+#balao5 {
+	display: block;
+	margin-top: 5px;
+	margin-left: auto;
+	margin-right: -40px;
+	width: 50%;
+}
+#balao6 {
+	display: block;
+	margin-top: 5px;
+	margin-left: -40px;
+	margin-right: auto;
+	width: 50%;
+}
+#balao7 {
+	display: block;
+	margin-top: 20px;
+	margin-bottom: -40px;
+	margin-left: auto;
+	margin-right: -10px;
+	width: 50%;
+}
+#balao8 {
+	display: block;
+	margin-top: 5px;
+	margin-left: auto;
+	margin-right: -40px;
+	width: 50%;
+}
