--- a/css/index_large.css
+++ b/css/index_large.css
@@ -1,4 +1,9 @@
-﻿@charset "utf-8";
+﻿/* DESIGN BY "JOÃO PAULO CARVALHO" */
+@charset "utf-8";
+#err {
+	position: absolute;
+	opacity: 0;
+}
 /* CORPO DA PÁGINA */
 .interface {
 	font-family: arial, sans-serif;
@@ -8,19 +13,43 @@
 }
 .postagens {
 	display: block;
-	width: 69%;
+	width: 67.5%;
 	float: left;
 	padding-left: 15px;
 }
 .windgets {
+	color: white;
 	display: block;
-	width: 28.5%;
+	width: 28%;
 	float: right;
-	padding-right: 15px;
+	padding: 10px; 
+	background-color: #23532f;
+	margin: 5px;
+	border: 1px solid rgba(0,0,0,0.3);
+	box-shadow: 0.5px 0.5px 5px rgba(0,0,0,0.5);
+	border-radius: 5px;
 }
 .rodape {
 	clear: both;
-	border-top: solid 1px;
+	color: #ffffff;
+	background-color: #474747;
+	padding: 10px;
+	width: 98.5%;
+}
+.rodape h3 {
+	text-align: center;
+	font-weight: normal;
+}
+.rodape p {
+	margin-top: -8px;
+}
+#logo-fig figcaption {
+	position: absolute;
+	display: block;
+	margin-left: 150px;
+	margin-top: -90px;
+}#logo-fig p {
+	font-weight: bold;
 }
 span#tavisNome {
 	font-weight: bold;
@@ -33,6 +62,7 @@ span#tavisNome {
 	border: solid 1px; 
 	margin-top: 10px;
 	margin-bottom: 10px;
+	margin-left: -10px;
 }
 hgroup h1 {
 	border-bottom: dashed 1px;
@@ -50,14 +80,16 @@ hgroup h1:hover {
 .imcwindow {
 	display: block;
 	border: none;
-	margin-left: auto;
-	margin-right: auto;
+	height: 960px;
+	margin-top: -10px;
+	margin-left: -18px;
+	margin-right: 0px;
 	margin-bottom: 10px;
-	width: 100%;
-	box-sizing: border-box;
+	width: 102.75%;
 }
 /* CABEÇALHO */
 header {
+	clear: both;
 	display: block;
 	border: 1px solid;
 	background-color: #6fb965;
@@ -75,20 +107,21 @@ header {
 }
 #log3 {
 	position: absolute;
-	margin-top: 45px;
-	margin-left: 5px;
+	margin-top: 42px;
+	margin-left: -5px;
 	z-index: 5; 
 }
 #log1 {
-	margin-left: 0px;
+	margin-left: 10px;
+	margin-top: 8.5px;
 	opacity: 100;
 	transition: 1s;
 }
 #log2 {	
-	margin-left: 0px;
+	margin-left: -80px;
 	display: block;
 	position: absolute;
-	margin-top: -275px;
+	margin-top: -265px;
 	opacity: 0;
 	transition: 1s;
 }
@@ -103,13 +136,11 @@ nav.menu{
 	display: block;
 	position: absolute;
 	margin-top: -45px;
-	margin-left: -10%;
+	margin-left: -10.29%;
 	width: 99.6%;
 	background: #90EE90;
 	box-sizing: border-box;
-	border-top: solid 1px;
-	border-left: solid 1px;
-	border-bottom: solid 1px;
+	border: solid 1px;
 	box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
 }
 nav.menu ul{
@@ -122,58 +153,53 @@ nav.menu ul{
 	margin-bottom: 0px;
  }
  nav.menu li{
-     display: inline-block;
-     background: #90EE90;
-     padding: 15px;
-     margin-right: -5px;
-     transition: background-color 1s;
+ 	color: black;
+    display: inline-block;
+    background: #90EE90;
+    padding: 15px;
+    margin-right: -5px;
+    transition: background-color 1s;
  }
  nav.menu h1{
-     display: none;
- }
- nav.menu a{
-     color: #000000;
-     text-decoration: none;
+    display: none;
  }
  nav.menu li:hover{
-     background-color:#006400; 
- }
- nav.menu li a:hover{
-     color: #FAEBD7;
-     text-decoration: ;
+ 	color: #ffffff;
+    background-color: #23532f; 
+    cursor: pointer;
  }
 /* CALCULO IMC */
 #calcimc {
 	display: block;
 	border: rgba(0,0,0,0);
-	width: 290px;
+	width: 300px;
 	margin-left: auto;
 	margin-right: auto;
 }
 #mass-form {
-	width: 137px;
+	width: 150px;
 	padding: 10px;
 	font-size: 15px;
 	border: solid 1px rgba(0,0,0,0.3);
 	border-radius: 8px;
 }
 #alt-form {
-	width: 68px;
+	width: 73px;
 	padding: 10px;
 	font-size: 15px;
 	border: solid 1px rgba(0,0,0,0.3);
 	border-radius: 8px;
 }
 #mass-form:required:valid {
-	box-shadow: 0px 0px 5px #38d708;
+	box-shadow: 0px 0px 5px #ffffff;
 	border-color: #a4f78b;
 }
 #alt-form:required:valid {
-	box-shadow: 0px 0px 5px #38d708;
+	box-shadow: 0px 0px 5px #ffffff;
 	border-color: #a4f78b;
 }
 .sex:required:valid {
-	box-shadow: 0px 0px 5px #38d708;
+	box-shadow: 0px 0px 5px #ffffff;
 	border-color: #a4f78b;
 }
 fieldset {
@@ -183,26 +209,29 @@ fieldset legend {
 	text-align: center;
 	font-size: 30px;
 	padding-top: 10px;
+	font-weight: bold;
 }
-fieldset p {
+#sexLegend {
 	margin-top: 7px; 
-	font-size: 18.3px;
+	font-size: 19px;
 }
 #makecalc {
 	display: block;
 	margin-top: -10px;
-	padding-left: 92px;
-	padding-right: 92px;
+	padding-left: 100.5px;
+	padding-right: 100.5px;
 	font-size: 20px;
 	background-color: white;
 	border: solid 1px rgba(0,0,0,0.3); 
 	border-radius: 5px;
 }
 #makecalc:hover {
-	box-shadow: inset 0px 0px 5px rgba(0,0,0,0.3);
+	box-shadow: inset 0px 0px 5px rgba(0,0,0,0.5);
+	cursor: pointer;
 }
 #makecalc:active {
-	background-color: rgba(0,9999,0,0.1);
+	color: white;
+	background-color: #23532f;
 }
 /* RODAPÉ */ 
 footer p {
