--- a/css/index_large.css
+++ b/css/index_large.css
@@ -29,6 +29,33 @@
 	box-shadow: 0.5px 0.5px 5px rgba(0,0,0,0.5);
 	border-radius: 5px;
 }
+.windgets2 {
+	color: white;
+	display: block;
+	width: 28%;
+	float: right;
+	padding: 10px; 
+	background-color: #23532f;
+	margin: 5px;
+	border: 1px solid rgba(0,0,0,0.3);
+	box-shadow: 0.5px 0.5px 5px rgba(0,0,0,0.5);
+	border-radius: 5px;
+}
+.windgets2 h2 {
+	color: #000000;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 15pt;
+	margin: -10px; 
+	text-align: center;
+	background-color: #b9f9b1;
+	padding: 20px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+.windgets2 p {
+	text-indent: 30px;
+}
 .rodape {
 	clear: both;
 	color: #ffffff;
