modificação no album de foto

--- a/css/videos.css
+++ b/css/videos.css
@@ -73,6 +73,7 @@
 	#tx h2 {
 		border-top-right-radius: 0px;
 		border-top-left-radius: 0px;
+		font-size: 17pt;
 		padding-left: 10px;
 		padding-top: 10px;
 		padding-right: 10px;
