--- a/css/fotos.css
+++ b/css/fotos.css
@@ -20,32 +20,58 @@
 	width: 100%;
 	margin-left: -10px;
 	border: 5px solid rgba(999,999,999,1.0);
-	box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+	box-shadow: 0px 0px 15px rgba(0,0,0,1);
 }
 #img {
 	display: block;
 	width: 100%;
 }
 /* SELEÇÃO DE FOTO */
+.windgets4 {
+	display: block;
+	width: 29.5%;
+	float: right;
+	background-color: white;
+	margin: 5px;
+	border: 1px solid rgba(0,0,0,0.3);
+	box-shadow: 0.5px 0.5px 5px rgba(0,0,0,0.5);
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+.windgets4 h2 {
+	color: white;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 13.5pt;
+	margin-top: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
+	margin-bottom: -10px; 
+	text-align: center;
+	background-color: #23532f;
+	padding: 15px;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+}
+#img1,#img2 {
+	margin-top: 10px;
+}
 #img1,#img3,#img5,#img7,#img9 {
-	width: 49%;
+	width: 50%;
 	display: block;
 	float: left;
 }
 #img2,#img4,#img6,#img8,#img10 {
-	width: 49%;
+	width: 50%;
 	display: block;
 	float: right;
 }
 .img0 {
-	margin-top: 1.5%;
-	box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-	border: 1px solid rgba(999,999,999,1.0);
-	border-radius: 10px;
+	margin-top: 0px;
 	transition: 0.5s;
 }
 .img0:hover {
-	border-radius: 0px;
+	border-radius: 20px;
 	cursor: pointer;
 }
 #description {
