--- a/css/index_large.css
+++ b/css/index_large.css
@@ -41,6 +41,51 @@
 	box-shadow: 0.5px 0.5px 5px rgba(0,0,0,0.5);
 	border-radius: 5px;
 }
+.windgets3 {
+	color: white;
+	display: block;
+	width: 28%;
+	float: right;
+	padding: 10px; 
+	background-color: #23532f;
+	margin: 5px;
+	border: 1px solid rgba(0,0,0,0.3);
+	box-shadow: 0.5px 0.5px 5px rgba(0,0,0,0.5);
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+.windgets3 h2 {
+	color: #000000;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 15pt;
+	margin: -10px; 
+	text-align: center;
+	background-color: #b9f9b1;
+	padding: 20px;
+	border-top-right-radius: 5px;
+	border-top-left-radius: 5px;
+	transition: 0.5s;
+}
+#figCap {
+	display: block;
+	margin-left: -10px;
+	margin-right: -10px;
+	margin-top: 5px;
+	margin-bottom: -14px;
+	padding: -10px;
+	z-index: 1;
+}
+#capa {
+	width: 100%;
+	padding: 0px;
+}
+#figCap:hover {
+	cursor: pointer;
+}
+.windgets3 h2:hover {
+	cursor: pointer;
+}
 .windgets2 h2 {
 	color: #000000;
 	text-transform: uppercase;
