--- a/css/index_small.css
+++ b/css/index_small.css
@@ -5,7 +5,7 @@
 	margin-right: auto;
 	width: 257px;
 	height: 200px;
-	background: url("../img/screenc.png")  no-repeat ;
+	background: url("https://ap.imagensbrasil.org/images/2016/10/30/screenc.png")  no-repeat ;
 }
 #err p {
 	display: block;
