--- a/css/index_small.css
+++ b/css/index_small.css
@@ -1,4 +1,12 @@
 @charset "utf-8";
+/* INTERFACE PRINCIPAL */
+* {
+	font-family: arial,sans-serif;
+	background-color: #6fb965;
+}
+#mob {
+	margin-top: 50px;
+}
 #err {
 	display: block;
 	margin-left: auto; 
@@ -16,10 +24,43 @@
 	margin-top: 10px;
 	text-align: center;
 	text-transform: uppercase;
+	font-size: 15pt;
 	font-weight: bold;
 	font-family: arial, sans-serif;
 }
 .interface {
 	opacity: 0;
 	overflow: hidden;
+}
+/* HEADER */
+#logo-fig {
+	display: block;
+	width: 305px;
+	margin-left: auto;
+	margin-right: auto;
+}
+#log1 {
+	width: 100px;
+}
+#log3 {
+	width: 200px;
+	margin-top: 10px; 
+}
+#log2 {
+	display: block;
+	position: absolute;
+	margin-top: -5000px;
+	opacity: 0;
+}
+#alpha {
+	display: block;
+	font-weight: bold;
+	margin-top: -130px;
+	margin-left: 190px;
+}
+#mobile {
+	display: block;
+	font-weight: bold;
+	margin-top: 80px;
+	margin-left: 190px;
 }
