--- a/css/index_large.css
+++ b/css/index_large.css
@@ -197,9 +197,11 @@ header {
 	margin-top: 8.5px;
 	opacity: 100;
 	transition: 1s;
+	width: 160px;
+	height: 250px;
 }
 #log2 {	
-	margin-left: -80px;
+	margin-left: -79px;
 	display: block;
 	position: absolute;
 	margin-top: -265px;
