--- a/css/videos.css
+++ b/css/videos.css
@@ -90,4 +90,69 @@
 		text-align: justify;
 		margin-top: -25px;
 	}
+} @media screen and (max-width: 1079px) {
+	/* ARTICLE */
+	.postagens {
+		margin-top: 10px;
+	}
+	article {
+		display: block;
+		width: 105%;
+		margin: 0px 0px 0px -8px;
+		background-color: #b9f9b1;
+		min-height: 280px;
+		box-sizing: border-box;
+	}
+	article h2 {
+		padding: 10px 10px 10px 20px;
+		margin-top: 0px;
+		color: #ffffff;
+		background-color: #23532f;
+		margin-left: -10px;
+	}
+	article p {
+		border: dashed 1px rgba(0,0,0,0.5);
+		color: rgba(0,0,0,0.5);
+		text-align: justify;
+		text-indent: 30px;
+		padding: 100px;
+	}
+	article iframe {
+		margin: -20px 0px -5px 0px;
+		width: 100%;
+		height: 235px;
+	}
+	/* ASIDE */
+	.windgets h2 {
+		color: #000000;
+		text-transform: uppercase;
+		font-weight: bold;
+		margin: -10px; 
+		text-align: center;
+		background-color: #b9f9b1;
+		padding: 20px;
+		border-top: 1px solid black;
+	}
+	#ft {
+		width: 100%;
+		margin-top: 20px;
+	}
+	#tx h2 {
+		font-size: 17pt;
+		padding-left: 10px;
+		padding-top: 10px;
+		padding-right: 10px;
+		padding-bottom: 4px;
+		margin-left: 0px;
+		margin-right: 0px;
+	}
+	#tx h3 {
+		text-align: right;
+		margin-right: 5px;
+	}
+	#tx p {
+		text-indent: 50px;
+		text-align: justify;
+		margin-top: -25px;
+	}
 }
