--- a/css/index_large.css
+++ b/css/index_large.css
@@ -260,15 +260,20 @@ header {
 	border: solid 1px rgba(0,0,0,0.3);
 	border-radius: 8px;
 }
+#selectSex {
+	margin: 5px 0px 15px 0px;
+	padding: 5px 28px 5px 28px;
+	font-size: 15pt;
+	border-radius: 5px;
+	background-color: white;
+	display: block;
+
+}
 #mass-form:required:valid {
 	box-shadow: 0px 0px 5px #ffffff;
 	border-color: #a4f78b;
 }
 #alt-form:required:valid {
-	box-shadow: 0px 0px 5px #ffffff;
-	border-color: #a4f78b;
-}
-.sex:required:valid {
 	box-shadow: 0px 0px 5px #ffffff;
 	border-color: #a4f78b;
 }
@@ -280,10 +285,6 @@ fieldset legend {
 	font-size: 30px;
 	padding-top: 10px;
 	font-weight: bold;
-}
-#sexLegend {
-	margin-top: 7px; 
-	font-size: 19px;
 }
 #makecalc {
 	display: block;
