--- a/css/index_small.css
+++ b/css/index_small.css
@@ -198,9 +198,13 @@ fieldset legend {
 	margin-top: 5px;
 	border: solid 1px rgba(0,0,0,0.3);
 }
-#sexLegend {
-	margin-top: 7px; 
-	font-size: 19px;
+#selectSex {
+	margin: 5px 0px 15px 0px;
+	padding: 5px 28px 5px 27px;
+	font-size: 15pt;
+	background-color: white;
+	display: block;
+
 }
 #makecalc {
 	display: block;
