corrigindo bug de seleção do sexo

--- a/css/index_large.css
+++ b/css/index_large.css
@@ -261,12 +261,13 @@ header {
 	border-radius: 8px;
 }
 #selectSex {
-	margin: 5px 0px 15px 0px;
+	margin: 5px auto 15px auto;
 	padding: 5px 28px 5px 28px;
 	font-size: 15pt;
 	border-radius: 5px;
 	background-color: white;
 	display: block;
+	border: solid 1px rgba(0,0,0,0.3);
 
 }
 #mass-form:required:valid {
