--- a/css/index_small.css
+++ b/css/index_small.css
@@ -200,7 +200,7 @@ fieldset legend {
 }
 #selectSex {
 	margin: 5px auto 15px auto;
-	padding: 5px 28px 5px 28px;
+	padding: 5px 30px 5px 30px;
 	font-size: 15pt;
 	background-color: white;
 	display: block;
@@ -210,8 +210,10 @@ fieldset legend {
 #makecalc {
 	display: block;
 	margin: -10px auto 0px auto;
-	padding: 0px 100px 0px 100px;
-	font-size: 20px;
+	padding: 3px 70px 3px 70px;
+	font-size: 20pt;
+	text-transform: uppercase;
+	font-weight: bold;
 	background-color: white;
 	border: solid 1px rgba(0,0,0,0.3); 
 }
