--- a/css/videos.css
+++ b/css/videos.css
@@ -97,8 +97,8 @@
 	}
 	article {
 		display: block;
-		width: 105%;
-		margin: 0px 0px 0px -11px;
+		width: 100%;
+		margin: 0px auto 0px auto;
 		background-color: #b9f9b1;
 		min-height: 280px;
 		box-sizing: border-box;
