--- a/css/index_large.css
+++ b/css/index_large.css
@@ -52,7 +52,7 @@ header {
 	display: block;
 	width: 28%;
 	float: right;
-	padding: 10px; 
+	padding: 10px 10px 9px 10px; 
 	background-color: #23532f;
 	margin: 5px;
 	border: 1px solid rgba(0,0,0,0.3);
