--- a/css/index_large.css
+++ b/css/index_large.css
@@ -1,11 +1,10 @@
 ﻿/* DESIGN BY "JOÃO PAULO CARVALHO" */
 @charset "utf-8";
-#mob,#comming {
-	margin-top: -99999px;
+#comming {
+	display: block;
 	position: absolute;
 	opacity: 0;
-} #err {
-	margin-top: -99999px;
+	margin: -9999px;
 }
 /* CORPO DA PÁGINA */
 .interface {
@@ -14,8 +13,8 @@
 	display: block;
 	background-color: #ffffff;
 }
-header {
-	font-family: arial, sans-serif;
+body {
+	margin: 0px;
 }
 .postagens {
 	display: block;
@@ -52,7 +51,7 @@ header {
 	display: block;
 	width: 28%;
 	float: right;
-	padding: 10px 10px 9px 10px; 
+	padding: 10px 10px 8px 10px; 
 	background-color: #23532f;
 	margin: 5px;
 	border: 1px solid rgba(0,0,0,0.3);
@@ -105,7 +104,7 @@ header {
 	text-indent: 30px;
 }
 
-#logo-fig figcaption {
+#logofig figcaption {
 	position: absolute;
 	display: block;
 	margin-left: 150px;
@@ -120,7 +119,7 @@ header {
 }
 
 /* IMC BOX */ 
-#imc-screen {
+#imcscreen {
 	display: block;
 	text-align: center;
 	box-sizing: border-box;
@@ -154,17 +153,15 @@ hgroup h1:hover {
 }
 /* CABEÇALHO */
 header {
+	font-family: arial,sans-serif;
 	clear: both;
 	display: block;
-	border: 1px solid;
+	border-bottom: 1px solid black;
 	background-color: #6fb965;
-	padding-left: 10%;
-	padding-right: 10%;
-	padding-top: 1%;
-	padding-bottom: 1%;
+	padding: 1% 10% 1% 10%;
 	box-sizing: border-box;
 }
-#logo-fig {
+#logofig {
 	display: block;
 	width: 600px;
 	margin-left: auto;
@@ -174,7 +171,7 @@ header {
 	position: absolute;
 	margin-top: 42px;
 	margin-left: -5px;
-	z-index: 5; 
+	z-index: 2; 
 }
 #log1 {
 	margin-left: 10px;
@@ -202,12 +199,12 @@ header {
 .menu{
 	display: block;
 	position: absolute;
-	margin-top: -60px;
-	margin-left: -5px;
-	width: 99.6%;
+	margin: -60px 0px 0px 0px;
+	width: 100%;
 	background: #90EE90;
 	box-sizing: border-box;
-	border: solid 1px;
+	border-top: solid 1px black;
+	border-bottom: solid 1px black;
 	box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
 }
 .menu ul{
@@ -222,19 +219,28 @@ header {
  .menu li{
     display: inline-block;
     padding: 15px 10px 14px 0px;
+    margin: 0px 0px 0px -15px;
+ }
+ @-moz-document url-prefix() {
+ 	.menu li {
+ 		margin: -1px 0px 1px -15px;
+ 	}
  }
  .menu a {
  	text-decoration: none;
  	color: black;
     background: #90EE90;
     padding: 15px;
-    margin-right: -15px;
     transition: background-color 1s;
  }
  .menu h1{
     display: none;
  }
  .menu a:hover{
+ 	color: #ffffff;
+    background-color: #23532f;
+ }
+ #here {
  	color: #ffffff;
     background-color: #23532f;
  }
@@ -246,14 +252,14 @@ header {
 	margin-left: auto;
 	margin-right: auto;
 }
-#mass-form {
+#massform {
 	width: 150px;
 	padding: 10px;
 	font-size: 15px;
 	border: solid 1px rgba(0,0,0,0.3);
 	border-radius: 8px;
 }
-#alt-form {
+#altform {
 	width: 73px;
 	padding: 10px;
 	font-size: 15px;
@@ -270,11 +276,11 @@ header {
 	border: solid 1px rgba(0,0,0,0.3);
 
 }
-#mass-form:required:valid {
+#massform:required:valid {
 	box-shadow: 0px 0px 5px #ffffff;
 	border-color: #a4f78b;
 }
-#alt-form:required:valid {
+#altform:required:valid {
 	box-shadow: 0px 0px 5px #ffffff;
 	border-color: #a4f78b;
 }
@@ -314,7 +320,8 @@ footer p {
 	color: #ffffff;
 	background-color: #474747;
 	padding: 10px;
-	width: 98.5%;
+	width: 100%;
+	margin: 0px 0px 0px -20px;
 }
 .rodape h3 {
 	text-align: center;
@@ -325,4 +332,28 @@ footer p {
 }
 span#tavisNome {
 	font-weight: bold;
+}
+#curtidas {
+	float: right;
+	width: 33%;
+	margin: 0px 5px 0px 40px; 
+}
+#comentarios {
+	float: right;
+	width: 60%;
+}
+.fbox {
+	display: block;
+}
+.fbox h1 {	
+	font-size: 23pt;
+}
+.fbox h2 {
+	margin-top: -18px;
+	font-size: 15pt;
+	border-bottom: 1px solid white;
+	padding-bottom: 5px;
+}
+.declar {
+	margin-top: 350px;
 }
