--- a/css/index_large.css
+++ b/css/index_large.css
@@ -7,6 +7,36 @@
 	margin: -9999px;
 }
 /* CORPO DA PÁGINA */
+#ajud {
+	display: block;
+	position: fixed;
+	opacity: 1;
+	margin: -240px 0px 0px 0px; 
+}
+#ajud a {
+	text-transform: uppercase;
+	text-decoration: none;
+	text-align: center;
+	font-size: 15pt;
+	color: black;
+	padding: 15px;
+	border-top: 1px dashed black;
+	border-bottom: 1px dashed black;
+	border-right: 1px dashed black;
+	border-bottom-right-radius: 20px;
+	border-top-right-radius: 20px;
+	background-color: #b9f9b1;
+	box-shadow: 0px 0px 3px rgba(0,0,0,0.8);
+	transition: all 0.5s;
+}
+#ajud a:hover {
+	color: white;
+	text-shadow: 0px 0px 5px rgba(0,0,0,0.8);
+	border-top: 1px dashed white;
+	border-bottom: 1px dashed white;
+	border-right: 1px dashed white;
+	background-color: #23532f;
+}
 .interface {
 	font-family: arial, sans-serif;
 	width: 100%;
