--- a/css/index_small.css
+++ b/css/index_small.css
@@ -1,11 +1,39 @@
 @charset "utf-8";
 /* INTERFACE PRINCIPAL */
+#ajud {
+	display: block;
+	position: fixed;
+	opacity: 1;
+	margin: -300px 0px 0px -8px;
+	width: 100%;
+}
+#ajud a {
+	display: block;
+	text-decoration: none;
+	text-transform: uppercase;
+	text-align: center;
+	border-bottom: 1px solid rgba(0,0,0,0.5);
+	font-size: 14pt;
+	color: black;
+    background: #90EE90;
+    padding: 10px;
+    margin: -47px auto -10px auto;    
+    width: 100%;
+    transition: 0.5s;
+    box-shadow: 1px 0px 5px rgba(0,0,0,0.8);
+}
+#ajud a:hover {
+	color: white;
+	text-shadow: 0px 0px 5px rgba(0,0,0,0.8);
+	background-color: #23532f;
+}
 header {
 	font-family: arial,sans-serif;
 	background-color: #6fb965;
-	margin: -17px -10px 0px -10px;
+	margin: 28px -10px 0px -10px;
 	padding: 3px 0px 7px 0px;
-} *{
+} 
+* {
 	font-family: arial,sans-serif;
 }
 body {
@@ -262,4 +290,9 @@ span#tavisNome {
 .declar {
 	display: block;
 	margin-top: 0px;
+}
+#curti {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
