--- a/css/index_large.css
+++ b/css/index_large.css
@@ -11,7 +11,7 @@
 	display: block;
 	position: fixed;
 	opacity: 1;
-	margin: -240px 0px 0px 0px; 
+	margin: -240px 0px 0px 0px;
 }
 #ajud a {
 	text-transform: uppercase;
@@ -57,7 +57,7 @@ body {
 	display: block;
 	width: 28%;
 	float: right;
-	padding: 10px; 
+	padding: 10px;
 	background-color: #23532f;
 	margin: 5px;
 	border: 1px solid rgba(0,0,0,0.3);
@@ -69,7 +69,7 @@ body {
 	display: block;
 	width: 28%;
 	float: right;
-	padding: 10px; 
+	padding: 10px;
 	background-color: #23532f;
 	margin: 5px;
 	border: 1px solid rgba(0,0,0,0.3);
@@ -81,7 +81,7 @@ body {
 	display: block;
 	width: 28%;
 	float: right;
-	padding: 10px 10px 8px 10px; 
+	padding: 10px 10px 8px 10px;
 	background-color: #23532f;
 	margin: 5px;
 	border: 1px solid rgba(0,0,0,0.3);
@@ -94,7 +94,7 @@ body {
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 15pt;
-	margin: -10px; 
+	margin: -10px;
 	text-align: center;
 	background-color: #b9f9b1;
 	padding: 20px;
@@ -123,7 +123,7 @@ body {
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 15pt;
-	margin: -10px; 
+	margin: -10px;
 	text-align: center;
 	background-color: #b9f9b1;
 	padding: 20px;
@@ -148,12 +148,12 @@ body {
 	opacity: 0;
 }
 
-/* IMC BOX */ 
+/* IMC BOX */
 #imcscreen {
 	display: block;
 	text-align: center;
 	box-sizing: border-box;
-	border: solid 1px; 
+	border: solid 1px;
 	margin-top: 10px;
 	margin-bottom: 10px;
 	margin-left: -10px;
@@ -201,7 +201,7 @@ header {
 	position: absolute;
 	margin-top: 42px;
 	margin-left: -5px;
-	z-index: 2; 
+	z-index: 2;
 }
 #log1 {
 	margin-left: 10px;
@@ -211,7 +211,7 @@ header {
 	width: 160px;
 	height: 249.5px;
 }
-#log2 {	
+#log2 {
 	margin-left: -79px;
 	display: block;
 	position: absolute;
@@ -330,7 +330,7 @@ fieldset legend {
 	padding-right: 100.5px;
 	font-size: 20px;
 	background-color: white;
-	border: solid 1px rgba(0,0,0,0.3); 
+	border: solid 1px rgba(0,0,0,0.3);
 	border-radius: 5px;
 }
 #makecalc:hover {
@@ -341,7 +341,7 @@ fieldset legend {
 	color: white;
 	background-color: #23532f;
 }
-/* RODAPÉ */ 
+/* RODAPÉ */
 footer p {
 	text-align: center;
 }
@@ -366,17 +366,18 @@ span#tavisNome {
 #curtidas {
 	float: right;
 	width: 33%;
-	margin: 0px 5px 0px 40px; 
+	margin: 0px 5px 0px 40px;
 }
 #comentarios {
 	float: right;
 	width: 60%;
 	margin-bottom: 10px;
+	margin-left: 10px;
 }
 .fbox {
 	display: block;
 }
-.fbox h1 {	
+.fbox h1 {
 	font-size: 23pt;
 }
 .fbox h2 {
@@ -385,6 +386,8 @@ span#tavisNome {
 	border-bottom: 1px solid white;
 	padding-bottom: 5px;
 }
-.declar {
-	margin-top: 350px;
+#sobre {
+	display: block;
+	width: 100%;
+	margin-bottom: 0px;
 }
