--- a/css/index_small.css
+++ b/css/index_small.css
@@ -17,7 +17,7 @@
 	color: black;
     background: #90EE90;
     padding: 10px;
-    margin: -52px auto -10px auto;    
+    margin: -52px auto -10px auto;
     width: 100%;
     transition: 0.5s;
     box-shadow: 1px 0px 5px rgba(0,0,0,0.8);
@@ -32,7 +32,7 @@ header {
 	background-color: #6fb965;
 	margin: 28px -10px 0px -10px;
 	padding: 3px 0px 7px 0px;
-} 
+}
 * {
 	font-family: arial,sans-serif;
 }
@@ -51,7 +51,7 @@ body {
 	color: white;
 	display: block;
 	width: 100%;
-	padding: 10px; 
+	padding: 10px;
 	background-color: #23532f;
 	margin: 0px 0px 0px -10px;
 	border-top: 1px solid rgba(0,0,0,1);
@@ -61,7 +61,7 @@ body {
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 14pt;
-	margin: -10px; 
+	margin: -10px;
 	text-align: center;
 	background-color: #b9f9b1;
 	padding: 20px;
@@ -73,7 +73,7 @@ body {
 	color: white;
 	display: block;
 	width: 100%;
-	padding: 10px; 
+	padding: 10px;
 	background-color: #23532f;
 	margin: 0px 0px 0px -10px;
 	border-bottom: 1px solid rgba(0,0,0,0.3);
@@ -84,7 +84,7 @@ body {
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 15pt;
-	margin: -10px; 
+	margin: -10px;
 	text-align: center;
 	background-color: #b9f9b1;
 	padding: 20px;
@@ -131,7 +131,7 @@ body {
 	color: black;
     background: #90EE90;
     padding: 10px;
-    margin: -10px auto -10px auto;    
+    margin: -10px auto -10px auto;
     width: 100%;
     transition: 0.5s;
 }
@@ -155,7 +155,7 @@ body {
 }
 #log3 {
 	width: 200px;
-	margin-top: 10px; 
+	margin-top: 10px;
 }
 #log2 {
 	display: block;
@@ -179,7 +179,7 @@ body {
 .windgets {
 	color: white;
 	display: block;
-	padding: 10px; 
+	padding: 10px;
 	background-color: #23532f;
 	margin: 0px 0px 0px -10px;
 	width: 100%;
@@ -243,7 +243,7 @@ fieldset legend {
 	text-transform: uppercase;
 	font-weight: bold;
 	background-color: white;
-	border: solid 1px rgba(0,0,0,0.3); 
+	border: solid 1px rgba(0,0,0,0.3);
 }
 /* IMC WINDOW */
 .imcwindow {
@@ -273,12 +273,15 @@ fieldset legend {
 span#tavisNome {
 	font-weight: bold;
 }
+#comm {
+	z-index: 0;
+}
 .fbox {
 	display: block;
 	margin: 0px auto 0px auto;
 	width: 90%;
 }
-.fbox h1 {	
+.fbox h1 {
 	font-size: 23pt;
 }
 .fbox h2 {
