--- a/css/index_large.css
+++ b/css/index_large.css
@@ -390,7 +390,12 @@ span#tavisNome {
 	display: block;
 	width: 100%;
 	margin-bottom: 0px;
+	clear: both;
+	padding-top: 5px;
 }
 #by {
 	margin-top: -18px;
+}
+.declar {
+	clear: both;
 }
